--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso de Introdução à Biossegurança em Laboratórios</title>
-    <link rel="stylesheet" href="bootstrap/css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-
-
+    <h1>Curso de Introdução à Biossegurança em Laboratórios</h1>
 
     <link rel="stylesheet" href="bootstrap/js/bootstrap.min.js">
 </body>
