--- a/html/curso.html
+++ b/html/curso.html
@@ -1,16 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/curso.css">
 </head>
+
 <body>
+    <div class="container-fluid text-center">
+        <h1>Curso de Introdução à Biossegurança em Laboratórios</h1>
+        <small>Comissão Interna de Biossegurança da Faculdade de Medicina - UnB</small>
+    </div>
+    
+
+    <div id="slider">
+        <a href="#" class="control_next">>></a>
+        <a href="#" class="control_prev"><</a>
+        <ul>
+            <li>SLIDE 1</li>
+            <li>SLIDE 2</li>
+            <li>SLIDE 3</li>
+            <li>SLIDE 4</li>
+            <li>SLIDE 5</li>
+            <li>SLIDE 6</li>
+            <li>SLIDE 7</li>
+            <li>SLIDE 8</li>
+        </ul>
+    </div>
+
+
 
 
     <link rel="stylesheet" href="bootstrap/js/bootstrap.min.js">
+    <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src="../js/script.js"></script>
 </body>
+
 </html>
