Criando Novos Tópicos: Papel e Atividades CIBio

--- a/html/curso.html
+++ b/html/curso.html
@@ -69,11 +69,51 @@
 
             <li>
                <h5 class="small">Papel da CIBio-FM CQB 0505/2020</h5>
+               <img src="../images/tarefa.png" alt="Tarea" width="180px">
+                <div class="vstack gap-2 col-md-10 mx-auto">                    
+                    <button type="button" class="btn btn-outline-primary paper-text">Estabelecer normas para as pesquisas com OGM e derivados;</button>
+                    <button type="button" class="btn btn-outline-primary paper-text">Fazer avaliação de risco de atividades e projetos com OGM e derivados, CASO A CASO;</button>
+                    <button type="button" class="btn btn-outline-primary paper-text">Autorizar, cadastrar e acompanhar as atividades de pesquisa com OGM (Nivel de Biossegurança NB1)
+                    ou derivado de OGM, e, em caso de OGM NB2 ou superior, encaminhar o projeto à CTNBio para apreciação e aprovação do projeto;</button>                   
+                </div>
+            </li>
+            
+            <li>
+                <div class="vstack gap-2 col-md-10 mx-auto space">                    
+                    <button type="button" class="btn btn-outline-primary paper-text">Assessoramento ao CNBS na formulação da Política Nacional de Biossegurança de OGM e derivados; Emitir os Certificados de Qualidade em Biossegurança – CQB;</button>
+                    <button type="button" class="btn btn-outline-primary paper-text">Emitir decisão técnica, sobre a biossegurança de OGM e seus derivados, que tem caráter vinculativo para os demais órgãos e entidades da administração;</button>
+                    <button type="button" class="btn btn-outline-primary paper-text">Elaborar o Manual de Biossegurança dos Laboratórios da Faculdade de Medicina da UnB;</button>   
+                    <button type="button" class="btn btn-outline-primary paper-text">Realizar inspeção anual nos laboratórios;</button>  
+                    <button type="button" class="btn btn-outline-primary paper-text">Treinar colaboradores e usuários dos laboratórios;</button> 
+                    <button type="button" class="btn btn-outline-primary paper-text">Realizar, ao menos, 2 reuniões anuais;</button>
+                    <button type="button" class="btn btn-outline-primary paper-text">Elaborar o relatório anual, informando os projetos envolvendo OGM em andamento; Relatar acidentes à CTNBio.</button>                                  
+                </div>
+            </li>
+
+            <li>
+                <h5 class="small">Papel da CIBio-FM CQB 0505/2020</h5>
+                <img src="../images/seguro.png" alt="Fiscalização" width="180px">
+                <div class="vstack gap-2 col-md-8 mx-auto space">                    
+                    <button type="button" class="btn btn-outline-primary paper-text">Portanto, apesar de fiscalizar apenas os laboratórios
+                    incluídos no Certificado de Qualidade em Biossegurança (CQB), a CIBio-FM UnB CQB 0505/2020 oferecerá o treinamento
+                    online em Biossegurança e pesquisa com OGM para os usuários de todos os laboratórios da Faculdade de Medicina da UnB.</button>                                                      
+                </div>
+            </li>
+
+            <li>
+                <h5 class="small">Atividades CIBio-FM CQB 0505/2020</h5>
             </li>
 
 
+
+
+
+
+
+
+
+
             
-            <li>SLIDE 6</li>
             <li>SLIDE 7</li>
             <li>SLIDE 8</li>
         </ul>
