--- a/html/curso.html
+++ b/html/curso.html
@@ -71,22 +71,22 @@
                <h5 class="small">Papel da CIBio-FM CQB 0505/2020</h5>
                <img src="../images/tarefa.png" alt="Tarea" width="180px">
                 <div class="vstack gap-2 col-md-10 mx-auto">                    
-                    <button type="button" class="btn btn-outline-primary paper-text">Estabelecer normas para as pesquisas com OGM e derivados;</button>
-                    <button type="button" class="btn btn-outline-primary paper-text">Fazer avaliação de risco de atividades e projetos com OGM e derivados, CASO A CASO;</button>
-                    <button type="button" class="btn btn-outline-primary paper-text">Autorizar, cadastrar e acompanhar as atividades de pesquisa com OGM (Nivel de Biossegurança NB1)
+                    <button type="button" class="btn btn-outline-success paper-text">Estabelecer normas para as pesquisas com OGM e derivados;</button>
+                    <button type="button" class="btn btn-outline-success paper-text">Fazer avaliação de risco de atividades e projetos com OGM e derivados, CASO A CASO;</button>
+                    <button type="button" class="btn btn-outline-success paper-text">Autorizar, cadastrar e acompanhar as atividades de pesquisa com OGM (Nivel de Biossegurança NB1)
                     ou derivado de OGM, e, em caso de OGM NB2 ou superior, encaminhar o projeto à CTNBio para apreciação e aprovação do projeto;</button>                   
                 </div>
             </li>
             
             <li>
                 <div class="vstack gap-2 col-md-10 mx-auto space">                    
-                    <button type="button" class="btn btn-outline-primary paper-text">Assessoramento ao CNBS na formulação da Política Nacional de Biossegurança de OGM e derivados; Emitir os Certificados de Qualidade em Biossegurança – CQB;</button>
-                    <button type="button" class="btn btn-outline-primary paper-text">Emitir decisão técnica, sobre a biossegurança de OGM e seus derivados, que tem caráter vinculativo para os demais órgãos e entidades da administração;</button>
-                    <button type="button" class="btn btn-outline-primary paper-text">Elaborar o Manual de Biossegurança dos Laboratórios da Faculdade de Medicina da UnB;</button>   
-                    <button type="button" class="btn btn-outline-primary paper-text">Realizar inspeção anual nos laboratórios;</button>  
-                    <button type="button" class="btn btn-outline-primary paper-text">Treinar colaboradores e usuários dos laboratórios;</button> 
-                    <button type="button" class="btn btn-outline-primary paper-text">Realizar, ao menos, 2 reuniões anuais;</button>
-                    <button type="button" class="btn btn-outline-primary paper-text">Elaborar o relatório anual, informando os projetos envolvendo OGM em andamento; Relatar acidentes à CTNBio.</button>                                  
+                    <button type="button" class="btn btn-outline-success paper-text">Assessoramento ao CNBS na formulação da Política Nacional de Biossegurança de OGM e derivados; Emitir os Certificados de Qualidade em Biossegurança – CQB;</button>
+                    <button type="button" class="btn btn-outline-success paper-text">Emitir decisão técnica, sobre a biossegurança de OGM e seus derivados, que tem caráter vinculativo para os demais órgãos e entidades da administração;</button>
+                    <button type="button" class="btn btn-outline-success paper-text">Elaborar o Manual de Biossegurança dos Laboratórios da Faculdade de Medicina da UnB;</button>   
+                    <button type="button" class="btn btn-outline-success paper-text">Realizar inspeção anual nos laboratórios;</button>  
+                    <button type="button" class="btn btn-outline-success paper-text">Treinar colaboradores e usuários dos laboratórios;</button> 
+                    <button type="button" class="btn btn-outline-success paper-text">Realizar, ao menos, 2 reuniões anuais;</button>
+                    <button type="button" class="btn btn-outline-success paper-text">Elaborar o relatório anual, informando os projetos envolvendo OGM em andamento; Relatar acidentes à CTNBio.</button>                                  
                 </div>
             </li>
 
@@ -94,7 +94,7 @@
                 <h5 class="small">Papel da CIBio-FM CQB 0505/2020</h5>
                 <img src="../images/seguro.png" alt="Fiscalização" width="180px">
                 <div class="vstack gap-2 col-md-8 mx-auto space">                    
-                    <button type="button" class="btn btn-outline-primary paper-text">Portanto, apesar de fiscalizar apenas os laboratórios
+                    <button type="button" class="btn btn-outline-success paper-text">Portanto, apesar de fiscalizar apenas os laboratórios
                     incluídos no Certificado de Qualidade em Biossegurança (CQB), a CIBio-FM UnB CQB 0505/2020 oferecerá o treinamento
                     online em Biossegurança e pesquisa com OGM para os usuários de todos os laboratórios da Faculdade de Medicina da UnB.</button>                                                      
                 </div>
@@ -102,6 +102,59 @@
 
             <li>
                 <h5 class="small">Atividades CIBio-FM CQB 0505/2020</h5>
+                <img src="../images/trabalho-em-equipe.png" alt="Atividades" width="200px">
+                <div class="vstack gap-2 col-md-8 mx-auto space">                    
+                    <button type="button" class="btn btn-outline-success paper-text">Pesquisa</button> 
+                    <button type="button" class="btn btn-outline-success paper-text">Liberação no meio ambiente</button>   
+                    <button type="button" class="btn btn-outline-success paper-text">Importação e exportação</button>   
+                    <button type="button" class="btn btn-outline-success paper-text">Produção</button>                                                       
+                </div>
+            </li>
+
+            <li>
+                <h5 class="small">Atividades CIBio-FM CQB 0505/2020</h5>
+                <div class="vstack gap-2 col-md-10 mx-auto space">
+                    <button type="button" class="btn btn-outline-success paper-text">Consumo</button> 
+                    <button type="button" class="btn btn-outline-success paper-text">Construção</button> 
+                    <button type="button" class="btn btn-outline-success paper-text">Armazenamento</button> 
+                    <button type="button" class="btn btn-outline-success paper-text">Cultivo</button> 
+                    <button type="button" class="btn btn-outline-success paper-text">Transferência</button>
+                    <button type="button" class="btn btn-outline-success paper-text">Descarte</button>
+                    <button type="button" class="btn btn-outline-success paper-text">Manipulação</button>
+                    <button type="button" class="btn btn-outline-success paper-text">Transporte e Comercialização</button>                    
+                </div>                 
+            </li>
+
+            <li>
+                <h5 class="small">Atividades CIBio-FM CQB 0505/2020</h5>
+                <img src="../images/estudo-de-caso.png" alt="Fiscalização" width="180px">
+                <div class="d-grid gap-2 col-8 mx-auto obj-list space">
+                    <button class="btn obj-list" style="background-color: #17753c" type="button">Portanto, apesar de fiscalizar apenas
+                    os laboratórios incluídos no Certificado de Qualidade em Biossegurança (CQB), a CIBio-FM UnB CQB 0505/2020 oferecerá
+                    o treinamento online em Biossegurança e pesquisa com OGM para os usuários de todos os laboratórios da Faculdade de
+                    Medicina da UnB.</button>                    
+                </div>
+            </li>
+
+            <li>
+                <h5 class="small">Quem pode desenvolver atividadeS envolvendo OGM?</h5>
+                <img class="img-fluid space" src="../images/sci.png" alt="Cientista" width="180px">
+                <div class="vstack gap-2 col-md-8 mx-auto space">
+                    <button type="button" class="btn btn-danger obj-list">Você não pode desenvolver atividades com OGM sozinho, em sua casa, por exemplo!</button>
+                </div>
+                <div class="spinner-grow spinner-grow-sm" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+                <div class="spinner-grow spinner-grow-sm" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+                <div class="spinner-grow spinner-grow-sm" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </li>
+
+            <li>
+                <h5>O que é OGM?</h5>
             </li>
 
 
