Inserindo Informações sobre OGM

--- a/html/curso.html
+++ b/html/curso.html
@@ -137,29 +137,34 @@
             </li>
 
             <li>
-                <h5 class="small">Quem pode desenvolver atividadeS envolvendo OGM?</h5>
+                <h5 class="small">Quem pode desenvolver atividades envolvendo OGM?</h5>
                 <img class="img-fluid space" src="../images/sci.png" alt="Cientista" width="180px">
                 <div class="vstack gap-2 col-md-8 mx-auto space">
                     <button type="button" class="btn btn-danger obj-list">Você não pode desenvolver atividades com OGM sozinho, em sua casa, por exemplo!</button>
-                </div>
-                <div class="spinner-grow spinner-grow-sm" role="status">
-                    <span class="visually-hidden">Loading...</span>
-                </div>
-                <div class="spinner-grow spinner-grow-sm" role="status">
-                    <span class="visually-hidden">Loading...</span>
-                </div>
-                <div class="spinner-grow spinner-grow-sm" role="status">
-                    <span class="visually-hidden">Loading...</span>
+                </div>             
+            </li>
+
+            <li>
+                <h5 class="small space">O que é OGM?</h5>
+                <img src="../images/dna-1.png" alt="DNA" width="280px">
+                <div class="d-grid gap-2 col-8 mx-auto obj-list space">
+                    <button class="btn obj-list" style="background-color: #174875" type="button">OGM: Organismo cujo material
+                    genético – DNA/RNA tenha sido modificado por qualquer técnica de engenharia genética.</button>                    
                 </div>
             </li>
 
             <li>
-                <h5>O que é OGM?</h5>
+                <h5 class="small space">O que é derivado de OGM</h5>
+                <img src="../images/dna-2.png" alt="DNA" width="280px">
+                <div class="d-grid gap-2 col-8 mx-auto obj-list space">
+                    <button class="btn obj-list" style="background-color: #174875" type="button">Derivado de OGM: produto obtido
+                    de OGM e que não possua capacidade autônoma de replicação ou que não contenha forma viável de OGM.</button>                    
+                </div>
             </li>
 
 
 
-
+           
 
 
 
