Alterando Imagem dos Objetivos

--- a/html/curso.html
+++ b/html/curso.html
@@ -28,7 +28,7 @@
 
             <li>
                 <h5 class="small">Objetivos do Curso</h5>
-                <img class="img-fluid" src="../images/objetivos.png" alt="" width="180px">
+                <img class="img-fluid" src="../images/metas.png" alt="" width="180px">
                 <br>
                 <div class="d-grid gap-2 col-6 mx-auto obj-list">
                     <button class="btn obj-list" style="background-color: #8661C1" type="button">Conhecer a composição
@@ -44,15 +44,15 @@
             <li>
                 <h5 class="small">Comissão Interna de Biossegurança</h5>
                 <h6>(CIBio-FM UnB CQB 0505/2020)</h6>
-                <div class="d-grid gap-2 col-8 mx-auto obj-list space">
+                <img src="../images/grupo.png" alt="Grupo" width="180px">
+                <div class="d-grid gap-2 col-8 mx-auto obj-list">
                     <button class="btn obj-list" style="background-color: #8661C1" type="button">Toda instituição que
                         utilizar técnicas e métodos de engenharia genética ou realizar pesquisas com OGM e seus
                         derivados deverá
                         criar uma Comissão Interna de Biossegurança - CIBio, além de indicar um técnico principal
                         responsável para
                         cada projeto específico.</button>
-                </div>
-                <img src="../images/grupo.png" alt="Grupo" width="180px">
+                </div>               
             </li>
 
             <li>
