--- a/html/curso.html
+++ b/html/curso.html
@@ -22,7 +22,7 @@
         <ul>
             <li>
                 <h5 class="small">CIBio-FM UnB CQB</h5>
-                <h6>Composição, Conceitos, Legislação e Responsabilidades Legais</h6>
+                <h6 class="subtitle">Composição, Conceitos, Legislação e Responsabilidades Legais</h6>
                 <img src="../images/cibio-concept.png" alt="Conceitos">
             </li>
 
@@ -43,38 +43,44 @@
 
             <li>
                 <h5 class="small">Comissão Interna de Biossegurança</h5>
-                <h6>(CIBio-FM UnB CQB 0505/2020)</h6>
-                <img src="../images/grupo.png" alt="Grupo" width="180px">
-                <div class="d-grid gap-2 col-8 mx-auto obj-list">
+                <h6 class="subtitle">(CIBio-FM UnB CQB 0505/2020)</h6>
+                <img class=" img-fluid org-space"  src="../images/discussao.png" alt="Grupo" width="180px">
+                <div class="d-grid gap-2 col-8 mx-auto obj-list space">
                     <button class="btn obj-list" style="background-color: #8661C1" type="button">Toda instituição que
                         utilizar técnicas e métodos de engenharia genética ou realizar pesquisas com OGM e seus
-                        derivados deverá
-                        criar uma Comissão Interna de Biossegurança - CIBio, além de indicar um técnico principal
-                        responsável para
-                        cada projeto específico.</button>
-                </div>               
+                        derivados deverá criar uma Comissão Interna de Biossegurança - CIBio, além de indicar um
+                        técnico principal responsável para cada projeto específico.</button>
+                </div>
             </li>
 
             <li>
-                <h5 class="small">Composição CIBio-FM UnB CQB 0505/2020</h5>
+                <h5 class="small space">Composição CIBio-FM UnB CQB 0505/2020</h5>
+                <img class="img-fluid space" src="../images/gestao.png" alt="Pessoas" width="180px">
                 <div class="d-grid gap-2 col-9 mx-auto space">
-                    <button class="btn obj-list" style="background-color: #57a0aa" type="button">Med. Veterinária:
-                        Fernanda Souza Natividade Gontijo;</button>
-                    <button class="btn obj-list" style="background-color: #8D86C9" type="button">Presidente: Profa. Dra.
-                        Doralina do Amaral Rabello Ramos;</button>
-                    <button class="btn obj-list" style="background-color: #57a0aa" type="button">Profa. Dra. Fabíola
-                        Cristina Ribeiro Zucchi;</button>
-                    <button class="btn obj-list" style="background-color: #8D86C9" type="button">Secretário: Prof. Dr.
-                        Hugo Costa Paes;</button>
-                    <button class="btn obj-list" style="background-color: #57a0aa" type="button">Profa. Dra. Juliana
-                        Forte Mazzeu de Araújo;</button>
-                    <button class="btn obj-list" style="background-color: #8D86C9" type="button">Vice-presidente: Profa.
-                        Dra. Juliana Lott de Carvalho;</button>
-                    <button class="btn obj-list" style="background-color: #57a0aa" type="button">Profa. Dra. Laila
-                        Salmen Espíndola;</button>
-                    <button class="btn obj-list" style="background-color: #8D86C9" type="button">Profa. Dra. Mariana
-                        Machado Hecht;</button>
+                    <button type="button" class="btn btn-secondary btn-sm obj-list space">Med. Veterinária:
+                    Fernanda Souza Natividade Gontijo;</button>
+                    <button type="button" class="btn btn-secondary btn-sm obj-list">Presidente: Profa. Dra.
+                    Doralina do Amaral Rabello Ramos;</button>
+                    <button type="button" class="btn btn-secondary btn-sm obj-list">Profa. Dra. Fabíola
+                    Cristina Ribeiro Zucchi;</button>
+                    <button type="button" class="btn btn-secondary btn-sm obj-list">Secretário: Prof. Dr.
+                    Hugo Costa Paes;</button>                    
                 </div>
+            </li>
+
+            <li>
+                <h5 class="small space">Composição CIBio-FM UnB CQB 0505/2020</h5>
+                <img class="small space" src="../images/pessoas-de-negocio.png" alt="Pessoas" width="180px">
+                <div class="d-grid gap-2 col-9 mx-auto space">
+                    <button type="button" class="btn btn-secondary btn-sm obj-list">Profa. Dra. Juliana
+                    Forte Mazzeu de Araújo;</button>
+                    <button type="button" class="btn btn-secondary btn-sm obj-list">Vice-presidente: Profa.
+                    Dra. Juliana Lott de Carvalho;</button>
+                    <button type="button" class="btn btn-secondary btn-sm obj-list">Profa. Dra. Laila
+                    Salmen Espíndola</button>
+                    <button type="button" class="btn btn-secondary btn-sm obj-list">Profa. Dra. Mariana
+                    Machado Hecht;</button>
+                </div>                
             </li>
 
             <li>
@@ -157,18 +163,15 @@
                 <img src="../images/estudo-de-caso.png" alt="Fiscalização" width="180px">
                 <div class="d-grid gap-2 col-8 mx-auto obj-list space">
                     <button class="btn obj-list" style="background-color: #17753c" type="button">Portanto, apesar de
-                        fiscalizar apenas
-                        os laboratórios incluídos no Certificado de Qualidade em Biossegurança (CQB), a CIBio-FM UnB CQB
-                        0505/2020 oferecerá
-                        o treinamento online em Biossegurança e pesquisa com OGM para os usuários de todos os
-                        laboratórios da Faculdade de
-                        Medicina da UnB.</button>
+                        fiscalizar apenas os laboratórios incluídos no Certificado de Qualidade em Biossegurança (CQB),
+                        a CIBio-FM UnB CQB 0505/2020 oferecerá o treinamento online em Biossegurança e pesquisa com OGM
+                        para os usuários de todos os laboratórios da Faculdade de Medicina da UnB.</button>
                 </div>
             </li>
 
             <li>
                 <h5 class="small">Quem pode desenvolver atividades envolvendo OGM?</h5>
-                <img class="img-fluid space" src="../images/sci.png" alt="Cientista" width="280px">
+                <img class="img-fluid space" src="../images/sci.png" alt="Cientista" width="180px">
                 <div class="vstack gap-2 col-md-6 mx-auto space">
                     <button type="button" class="btn btn-danger obj-list">Você não pode desenvolver atividades com OGM
                         sozinho, em sua casa, por exemplo!</button>
@@ -180,8 +183,7 @@
                 <img src="../images/dna-1.png" alt="DNA" width="280px">
                 <div class="d-grid gap-2 col-8 mx-auto obj-list space">
                     <button class="btn obj-list" style="background-color: #174875" type="button">OGM: Organismo cujo
-                        material
-                        genético – DNA/RNA tenha sido modificado por qualquer técnica de engenharia genética.</button>
+                        material genético – DNA/RNA tenha sido modificado por qualquer técnica de engenharia genética.</button>
                 </div>
             </li>
 
@@ -190,9 +192,8 @@
                 <img src="../images/dna-2.png" alt="DNA" width="280px">
                 <div class="d-grid gap-2 col-8 mx-auto obj-list space">
                     <button class="btn obj-list" style="background-color: #174875" type="button">Derivado de OGM:
-                        produto obtido
-                        de OGM e que não possua capacidade autônoma de replicação ou que não contenha forma viável de
-                        OGM.</button>
+                        produto obtido de OGM e que não possua capacidade autônoma de replicação ou que não contenha
+                        forma viável de OGM.</button>
                 </div>
             </li>
 
@@ -202,28 +203,26 @@
                 <br>
                 <div class="d-grid gap-2 col-8 mx-auto obj-list org-space">
                     <button class="btn obj-list" style="background-color: #8661C1" type="button">Todas as atividades
-                        envolvendo
-                        OGM são reguladas pela lei de biossegurança, no. 11.105, de 2005.</button>
+                        envolvendo OGM são reguladas pela lei de biossegurança, no. 11.105, de 2005.</button>
                 </div>
             </li>
 
-            <li>
-                <h5>Trabalho com Organismos Geneticamente Modificados</h5>
-                <h6>A Lei número 11.105, de 2005:</h6>
-                <div class="d-flex justify-content-center text-center">
-                    <div class="obj-text">
-                        <div class="bg-success p-2 text-dark bg-opacity-10">Estabelecer normas para as pesquisas com OGM
-                            e derivados;</div>
-                        <div class="bg-success p-2 text-dark bg-opacity-25">Fazer avaliação de risco de atividades e
-                            projetos com OGM e derivados, CASO A CASO;</div>
-                        <div class="bg-success p-2 text-dark bg-opacity-10">
-                            <p>Autorizar, cadastrar e acompanhar as atividades de pesquisa com OGM (Nivel de Biossegurança NB1)
-                            ou derivado de OGM</p>
-                        </div>
-                        <div class="bg-success p-2 text-dark bg-opacity-25">Relatar acidentes à CTNBio.</div>
+            <li>                
+                <h5 class="small">A Lei número 11.105 de 2005:</h5>
+                <div class="col d-flex justify-content-center">
+                    <div class="card text-bg-info mb-4" style="max-width: 35rem;">
+                        <div class="card-header">Cria o Conselho Nacional de Biossegurança (CNBS);</div>
+                        <div class="card-header">Cria a Comissão Técnica Nacional de Biossegurança (CTNBio) e
+                        determina que as instituições que realizem atividades com OGM criem as Comissões Internas
+                        de Biossegurança (CIBio);</div>
+                        <div class="card-header">Institui a obrigatoriedade do Certificado de Qualidade em Biossegurança (CQB)
+                        emitido pela CTNBio e Estabelece as diretrizes e procedimentos para atividades que envolvam a OGM e seus
+                        derivado;</div>                                                
                     </div>
-                </div>
+                </div>                
             </li>
+
+         
 
 
 
