Inserindo Informações Sobre CTNBio

--- a/html/curso.html
+++ b/html/curso.html
@@ -34,8 +34,7 @@
                     <button class="btn obj-list" style="background-color: #8661C1" type="button">Conhecer a composição
                         da CIBio-FM UnB;</button>
                     <button class="btn obj-list" style="background-color: #8661C1" type="button">Compreender o arcabouço
-                        regulatório envolvendo Biossegurança e Organismos
-                        Geneticamente Modificados (OGM);</button>
+                        regulatório envolvendo Biossegurança e Organismos Geneticamente Modificados (OGM);</button>
                     <button class="btn obj-list" style="background-color: #8661C1" type="button">Conhecer as normas de
                         biossegurança;</button>
                 </div>
@@ -215,8 +214,62 @@
                     target="_blank"><button type="button" class="btn btn-outline-primary paper-text"><b>Secretaria de
                             Aquicultura e Pesca - SAP/MAPA</b></button></a>
                 </div>
-            </li>     
-        
+            </li>   
+            
+            <li>
+                <h5 class="small">Organograma</h5>
+                <h6 class="subtitle">Órgãos Envolvidos no Monitoramento das Atividades Envolvendo OGM no Brasil</h6>
+                <img src="../images/organograma.PNG" alt="Organograma" width="650px">
+            </li>
+
+            <li>
+                <h5 class="small">Organograma</h5>
+                <h6 class="subtitle">Órgãos Envolvidos no Monitoramento das Atividades Envolvendo OGM no Brasil</h6>
+                <img class="img-fluid space" src="../images/plano-de-desenvolvimento.png" alt="Desenvolvimento" width="160px">
+                <div class="d-grid gap-2 col-8 mx-auto obj-list">
+                    <button class="btn obj-list" style="background-color: #61bbc1" type="button">Modelo descentralizado;</button>
+                    <button class="btn obj-list" style="background-color: #61bbc1" type="button">As CIBios devem enviar relatórios anuais à CTNBio,
+                    além de reportar eventuais acidentes;</button>
+                    <button class="btn obj-list" style="background-color: #61bbc1" type="button">As CIBios são responsáveis por garantir a biossegurança
+                    envolvendo OGM no país!</button>
+                </div>
+            </li>
+
+            <li>
+                <h5 class="small">Comissão Técnica Nacional de Biossegurança (CTNBio)</h5>
+                <img class="img-fluid space" src="../images/portfolio.png" alt="Decisão" width="150px">
+                <br>
+                <div class="d-grid gap-2 col-6 mx-auto obj-list space">
+                    <button class="btn obj-list" style="background-color: #61bbc1" type="button">PRERROGATIVA</button>
+                    <button class="btn obj-list" style="background-color: #61bbc1" type="button">Decisões técnicas sobre OGM e derivados;</button>
+                    <button class="btn obj-list" style="background-color: #61bbc1" type="button">Decisões técnicas sobre OGM e derivados;</button>
+                </div>
+            </li>
+
+            <li>
+                <h5 class="small">Composição (CTNBio)</h5>
+                <div class="d-grid gap-2 col-10 mx-auto obj-list space">
+                    <button class="btn obj-list" style="background-color: #d78a4a" type="button">12 cientistas: 3 da área de saúde humana, 3 de animal,
+                    3 de vegetal, 3 de meio ambiente;</button>
+                    <button class="btn obj-list" style="background-color: #d78a4a" type="button">9 representantes de ministérios;</button>
+                    <button class="btn obj-list" style="background-color: #d78a4a" type="button">1 especialista em defesa do consumidor;</button>
+                    <button class="btn obj-list" style="background-color: #d78a4a" type="button">1 especialista em saúde e 1 especialista em biotecnologia;</button>
+                    <button class="btn obj-list" style="background-color: #d78a4a" type="button">1 especialista em meio ambiente;</button>                   
+                    <button class="btn obj-list" style="background-color: #d78a4a" type="button">1 especialista em agricultura familiar;</button>
+                    <button class="btn obj-list" style="background-color: #d78a4a" type="button">1 especialista em saúde do trabalhador;</button>                    
+                </div>
+            </li>
+
+            <li>
+                <h5 class="small">Objetivos (CTNBio)</h5>
+                <img class="img-fluid space" src="../images/planejamento.png" alt="Observações" width="180px">
+                <div class="d-grid gap-2 col-6 mx-auto obj-list space">
+                    <button class="btn obj-list space" style="background-color: #565457" type="button">Quorum mínimo é 14. Decisões por maioria absoluta dos membros
+                    (14 votos favoráveis), para uso comercial mínimo de votos favoráveis é 18.</button>
+                    <button class="btn obj-list" style="background-color: #565457" type="button">Obs: TODOS os membros devem ter
+                    doutorado!</button>                                      
+                </div>
+            </li>              
 
 
 
