Inserindo Informações Sobre CTNBio e CNBS

--- a/html/curso.html
+++ b/html/curso.html
@@ -248,7 +248,7 @@
 
             <li>
                 <h5 class="small">Composição (CTNBio)</h5>
-                <div class="d-grid gap-2 col-10 mx-auto obj-list space">
+                <div class="d-grid gap-2 col-8 mx-auto obj-list space">
                     <button class="btn obj-list" style="background-color: #d78a4a" type="button">12 cientistas: 3 da área de saúde humana, 3 de animal,
                     3 de vegetal, 3 de meio ambiente;</button>
                     <button class="btn obj-list" style="background-color: #d78a4a" type="button">9 representantes de ministérios;</button>
@@ -261,7 +261,7 @@
             </li>
 
             <li>
-                <h5 class="small">Objetivos (CTNBio)</h5>
+                <h5 class="small">Observações (CTNBio)</h5>
                 <img class="img-fluid space" src="../images/planejamento.png" alt="Observações" width="180px">
                 <div class="d-grid gap-2 col-6 mx-auto obj-list space">
                     <button class="btn obj-list space" style="background-color: #565457" type="button">Quorum mínimo é 14. Decisões por maioria absoluta dos membros
@@ -269,7 +269,35 @@
                     <button class="btn obj-list" style="background-color: #565457" type="button">Obs: TODOS os membros devem ter
                     doutorado!</button>                                      
                 </div>
-            </li>              
+            </li>    
+            
+            <li>
+                <h5 class="small">Conselho Nacional de Biossegurança (CNBS)</h5>
+                <img class="img-fluid space"  src="../images/empregado.png" alt="Conselho Nacional" width="180px">
+                <div class="d-grid gap-2 col-6 mx-auto obj-list space">
+                    <button class="btn obj-list space" style="background-color: #8661C1" type="button">Presidente: Ministro de Estado Chefe
+                    da Casa Civil</button>
+                    <button class="btn obj-list" style="background-color: #8661C1" type="button">Ministro da Ciência e Tecnologia</button>
+                    <button class="btn obj-list" style="background-color: #8661C1" type="button">Ministro do Desenvolvimento Agrário</button>
+                </div>
+            </li>
+
+            <li>
+                <div class="d-grid gap-2 col-6 mx-auto obj-list org-space">
+                    <button class="btn obj-list" style="background-color: #8661C1" type="button">Ministro da Agricultura, Pecuária e
+                    Abastecimento</button>
+                    <button class="btn obj-list" style="background-color: #8661C1" type="button"> Ministro da Justiça e Ministro da Saúde</button>
+                    <button class="btn obj-list" style="background-color: #8661C1" type="button">Ministro do Meio Ambiente</button>
+                    <button class="btn obj-list" style="background-color: #8661C1" type="button">Ministro do Desenvolvimento, Indústria e
+                    Comércio Exterior</button>
+                    <button class="btn obj-list" style="background-color: #8661C1" type="button">Ministro das Relações Exteriores</button>
+                    <button class="btn obj-list" style="background-color: #8661C1" type="button">Ministro da Defesa</button>
+                    <button class="btn obj-list" style="background-color: #8661C1" type="button">Secretário Especial de Aqüicultura e Pesca da
+                    Presidência da República</button>
+                </div>
+            </li>
+
+        
 
 
 
