Adicionando Competẽncia dos OERF e Exemplos de Infrações

--- a/html/curso.html
+++ b/html/curso.html
@@ -297,6 +297,78 @@
                 </div>
             </li>
 
+            <li>
+                <h5 class="small">Na UnB, há mais de uma CIBio!</h5>
+                <img src="../images/dna-3.png" alt="DNA" width="180px">
+                <div class="d-grid gap-2 col-8 mx-auto obj-list space">
+                    <button class="btn obj-list" style="background-color: #174875" type="button">A CIBio-FM UnB CQB 0505/2020 fiscaliza apenas
+                    os laboratórios da Faculdade de Medicina que estão contemplados no Certificado de Qualidade em Biossegurança (CQB), mas orienta
+                    todos os laboratórios da Faculdade de Medicina sobre aspectos de biossegurança e boas práticas de laboratório.</button>
+                </div>
+            </li>
+
+            <li>
+                <h5 class="small">Órgãos e Entidades de Registro e Fiscalização</h5>                
+                <img src="../images/seguro.png" alt="Fiscalização" width="180px">
+                <div class="d-grid gap-2 col-8 mx-auto obj-list">
+                    <button type="button" class="btn obj-list" style="background-color: #629460">Agricultura: Ministério da Agricultura, Pecuária
+                    e Abastecimento;</button>
+                    <button type="button" class="btn obj-list" style="background-color: #629460">Saúde: Ministério da Saúde;</button>
+                    <button type="button" class="btn obj-list" style="background-color: #629460">Meio Ambiente: Ministério do Meio Ambiente;</button>
+                    <button type="button" class="btn obj-list" style="background-color: #629460">Secretaria Especial de Aqüicultura e Pesca - SEAP</button>               
+                </div>
+            </li>
+
+            <li>
+                <h5 class="small">Competência dos OERF</h5>   
+                <img src="../images/labsci.png" alt="Cientista" width="180px"> 
+                <div class="d-grid gap-2 col-10 mx-auto obj-list space">
+                    <button class="btn obj-list space" style="background-color: #607594" type="button">Fiscalizar as atividades de pesquisa e fiscalizar o cumprimento das normas
+                    e medidas de biossegurança;</button>              
+                    <button class="btn obj-list" style="background-color: #607594" type="button">Estabelecer normas de registro, autorização, fiscalização e licenciamento
+                    ambiental;</button>
+                    <button class="btn obj-list" style="background-color: #607594" type="button">Registrar e fiscalizar a liberação comercial e emitir autorização para a
+                    importação de OGM para uso comercial.</button>                    
+                </div>          
+            </li>
+            
+            <li>
+                <h5 class="small">Exemplos de infrações administrativas</h5>
+                <img class="img-fluid org-space" src="../images/mascara-de-gas.png" alt="Máscara de Gás" width="180px">
+                <div class="d-grid gap-2 col-6 mx-auto obj-list">
+                    <button type="button" class="btn obj-list" style="background-color: #8661C1">Realizar atividades de pesquisa e uso
+                    comercial de OGM e seus derivados sem autorização da CTNBio ou em desacordo com as normas por ela expedidas;</button>                                  
+                </div>                
+            </li>
+
+            <li>
+                <h5 class="small">Exemplos de infrações administrativas</h5>
+                <img class="img-fluid org-space" src="../images/perigo.png" alt="Máscara de Gás" width="180px">
+                <div class="d-grid gap-2 col-6 mx-auto obj-list">
+                    <button type="button" class="btn obj-list" style="background-color: #c74b4b">Deixar de manter registro do acompanhamento individual de cada
+                    atividade ou projeto de pesquisa envolvendo OGM;</button>                                  
+                </div>                
+            </li>
+
+            <li>
+                <h5 class="small">Exemplos de infrações administrativas</h5>
+                <img class="img-fluid org-space" src="../images/risco-biologico.png" alt="Máscara de Gás" width="180px">
+                <div class="d-grid gap-2 col-6 mx-auto obj-list">
+                    <button type="button" class="btn obj-list" style="background-color: #4bc755">Destruir ou descartar OGM no meio ambiente em desacordo com as normas
+                    da CTNBio e dos OERF;</button>                                  
+                </div>                
+            </li>
+
+            <li>
+                <h5 class="small">Exemplos de infrações administrativas</h5>
+                <img class="img-fluid org-space" src="../images/corrosivo.png" alt="Máscara de Gás" width="180px">
+                <div class="d-grid gap-2 col-8 mx-auto obj-list">
+                    <button type="button" class="btn obj-list" style="background-color: #8661C1">Produzir, armazenar, transportar, comercializar, importar ou exportar OGM e seus derivados,
+                    sem autorização ou em desacordo com as normas estabelecidas pela CTNBio e pelos órgãos de registro e fiscalização.</button>                                  
+                </div>                
+            </li>
+
+
         
 
 
