--- a/html/curso.html
+++ b/html/curso.html
@@ -368,9 +368,21 @@
                 </div>                
             </li>
 
+            <li>
+                <h5 class="small">Responsabilidades</h5>
+                <div class="d-grid gap-2 col-8 mx-auto obj-list">
+                    <button class="btn btn-primary obj-list" type="button" disabled>Civil</button>
+                    <button type="button" class="btn btn-success obj-list">Indenizar ou reparar danos ao meio ambiente e a terceiros;</button> 
+                    <button class="btn btn-primary obj-list" type="button" disabled>Administrativa</button>  
+                    <button type="button" class="btn btn-success obj-list">Pagamento de multas entre R$2.000,00 e R$1.500.000,00;</button> 
+                    <button class="btn btn-primary obj-list" type="button" disabled>Criminal</button>
+                    <button type="button" class="btn btn-success obj-list">Tipificação de crimes e respectivas penas. Ex: liberação ou descarte de OGM no
+                    meio ambiente; transporte, importação em desacordo com normas da CTNBio.</button>                               
+                </div>
+            </li>
 
         
-
+            
 
 
 
