Inserindo Informações Sobre Elementos de Fiscalização

--- a/html/curso.html
+++ b/html/curso.html
@@ -477,6 +477,23 @@
                 </div>
             </li>
 
+            <li>
+                <h5 class="small">Elementos de Fiscalização de Laboratórios de Pesquisa</h5>
+                <img src="../images/mascara-facial.png" alt="Máscara" width="120px">
+                <div class="d-grid gap-2 col-10 mx-auto obj-list">
+                    <button class="btn obj-list" style="background-color: #61b7c1" type="button">Treinamento e uso de Equipamentos de Proteção
+                    Individual (EPI);</button>
+                    <button class="btn obj-list" style="background-color: #61b7c1" type="button">Restrição de acesso ao laboratório;</button>
+                    <button class="btn obj-list" style="background-color: #61b7c1" type="button">Classe de risco dos OGM em pesquisa;</button>
+                    <button class="btn obj-list" style="background-color: #61b7c1" type="button">Nível de Biossegurança (1-4) e sinalização do risco biológico de cada área;
+                    Instalações utilizadas e habilitadas no CQB.</button>
+                </div>
+            </li>
+
+            <li>
+                <h5 class="small">Análise dos Documentos</h5>
+            </li>
+
 
 
 
