Adicionando Informações Sobre Análise de Documentos

--- a/html/curso.html
+++ b/html/curso.html
@@ -450,7 +450,8 @@
             </li>
 
             <li>
-                <h5 class="small">Gravidade x Multa</h5>                
+                <h5 class="small">Gravidade x Multa</h5>   
+                <img src="../images/alarme.png" alt="Multa" width="120px">             
                 <div class="d-grid gap-2 col-10 mx-auto org-space">
                     <table class="table text-center">
                         <thead class="table">
@@ -461,8 +462,8 @@
                         </thead>
                         <tbody>
                             <tr>                                
-                                <td class="table-primary">Leve</td>
-                                <td class="table-primary">R$ 2.000 a R$ 60.000</td>                               
+                                <td class="table-success">Leve</td>
+                                <td class="table-success">R$ 2.000 a R$ 60.000</td>                               
                             </tr>
                             <tr>                                
                                 <td class="table-warning">Grave</td>
@@ -492,6 +493,19 @@
 
             <li>
                 <h5 class="small">Análise dos Documentos</h5>
+                <div class="d-grid gap-2 col-10 mx-auto obj-list">
+                    <button class="btn obj-list" style="background-color: #8661C1" type="button">Registro dos treinamentos;</button>
+                    <button class="btn obj-list" style="background-color: #8661C1" type="button">Registro individual dos projetos;</button>
+                    <button class="btn obj-list" style="background-color: #8661C1" type="button">Atas de reuniões da CIBio;</button>
+                    <button class="btn obj-list" style="background-color: #8661C1" type="button">Relatórios de inspeções internas;</button>
+                    <button class="btn obj-list" style="background-color: #8661C1" type="button">Manual de Biossegurança;</button>
+                    <button class="btn obj-list" style="background-color: #8661C1" type="button">Registro dos procedimentos de controle de
+                    insetos e roedores;</button>
+                    <button class="btn obj-list" style="background-color: #8661C1" type="button">Registro de procedimentos de descontaminação
+                    e descarte de resíduos;</button>
+                    <button class="btn obj-list" style="background-color: #8661C1" type="button">Certificados de calibração de equipamentos
+                    (cabines e autoclaves).</button>
+                </div>
             </li>
 
 
