Inserindo Informações Sobre Checagem

--- a/html/curso.html
+++ b/html/curso.html
@@ -494,18 +494,34 @@
             <li>
                 <h5 class="small">Análise dos Documentos</h5>
                 <div class="d-grid gap-2 col-10 mx-auto obj-list">
-                    <button class="btn obj-list" style="background-color: #8661C1" type="button">Registro dos treinamentos;</button>
-                    <button class="btn obj-list" style="background-color: #8661C1" type="button">Registro individual dos projetos;</button>
-                    <button class="btn obj-list" style="background-color: #8661C1" type="button">Atas de reuniões da CIBio;</button>
-                    <button class="btn obj-list" style="background-color: #8661C1" type="button">Relatórios de inspeções internas;</button>
-                    <button class="btn obj-list" style="background-color: #8661C1" type="button">Manual de Biossegurança;</button>
-                    <button class="btn obj-list" style="background-color: #8661C1" type="button">Registro dos procedimentos de controle de
+                    <button class="btn obj-list" style="background-color: #174875" type="button">Registro dos treinamentos;</button>
+                    <button class="btn obj-list" style="background-color: #174875" type="button">Registro individual dos projetos;</button>
+                    <button class="btn obj-list" style="background-color: #174875" type="button">Atas de reuniões da CIBio;</button>
+                    <button class="btn obj-list" style="background-color: #174875" type="button">Relatórios de inspeções internas;</button>
+                    <button class="btn obj-list" style="background-color: #174875" type="button">Manual de Biossegurança;</button>
+                    <button class="btn obj-list" style="background-color: #174875" type="button">Registro dos procedimentos de controle de
                     insetos e roedores;</button>
-                    <button class="btn obj-list" style="background-color: #8661C1" type="button">Registro de procedimentos de descontaminação
+                    <button class="btn obj-list" style="background-color: #174875" type="button">Registro de procedimentos de descontaminação
                     e descarte de resíduos;</button>
-                    <button class="btn obj-list" style="background-color: #8661C1" type="button">Certificados de calibração de equipamentos
+                    <button class="btn obj-list" style="background-color: #174875" type="button">Certificados de calibração de equipamentos
                     (cabines e autoclaves).</button>
                 </div>
+            </li>
+
+            <li>
+                <h5 class="small">Antes de iniciar suas atividades envolvendo OGM, cheque:</h5>
+                <div class="d-grid gap-2 col-10 mx-auto obj-list">
+                    <button class="btn obj-list" style="background-color: #d78a4a" type="button">Se o laboratório em que você desenvolverá suas atividades faz
+                    parte do CQB 0505/2020 da CIBio-FM UnB;</button>
+                    <button class="btn obj-list" style="background-color: #d78a4a" type="button">Se o projeto foi cadastrado/aprovado pela CIBio-FM UnB;</button>
+                    <button class="btn obj-list" style="background-color: #d78a4a" type="button">Se você se lembra deste treinamento, ou se deverá repetí-lo;</button>
+                    <button class="btn obj-list" style="background-color: #d78a4a" type="button">Se você conhece a composição da CIBio-FM UnB;</button>
+                    <button class="btn obj-list" style="background-color: #d78a4a" type="button"> Se o laboratório tem nível de biossegurança adequado para a atividade</button>                                
+                </div>
+            </li>
+
+            <li>
+                <h5 class="small">Objetivo da Fiscalização</h5>
             </li>
 
 
