Adicionando Novas Imagens

--- a/html/curso.html
+++ b/html/curso.html
@@ -510,18 +510,23 @@
 
             <li>
                 <h5 class="small">Antes de iniciar suas atividades envolvendo OGM, cheque:</h5>
+                <img src="../images/sinal-de-visto.png" alt="Check" width="200px">
                 <div class="d-grid gap-2 col-10 mx-auto obj-list">
                     <button class="btn obj-list" style="background-color: #d78a4a" type="button">Se o laboratório em que você desenvolverá suas atividades faz
                     parte do CQB 0505/2020 da CIBio-FM UnB;</button>
-                    <button class="btn obj-list" style="background-color: #d78a4a" type="button">Se o projeto foi cadastrado/aprovado pela CIBio-FM UnB;</button>
-                    <button class="btn obj-list" style="background-color: #d78a4a" type="button">Se você se lembra deste treinamento, ou se deverá repetí-lo;</button>
-                    <button class="btn obj-list" style="background-color: #d78a4a" type="button">Se você conhece a composição da CIBio-FM UnB;</button>
-                    <button class="btn obj-list" style="background-color: #d78a4a" type="button"> Se o laboratório tem nível de biossegurança adequado para a atividade</button>                                
+                    <button class="btn obj-list" style="background-color: #d78a4a" type="button">Se o projeto foi cadastrado/aprovado pela CIBio-FM UnB;</button>                                                    
                 </div>
             </li>
 
             <li>
-                <h5 class="small">Objetivo da Fiscalização</h5>
+                <h5 class="small">Antes de iniciar suas atividades envolvendo OGM, cheque:</h5>
+                <img src="../images/checar.png" alt="Checar" width="180px">
+                <div class="d-grid gap-2 col-10 mx-auto obj-list">             
+                    <button class="btn obj-list" style="background-color: #d78a4a" type="button">Se você se lembra deste treinamento, ou se deverá repetí-lo;</button>
+                    <button class="btn obj-list" style="background-color: #d78a4a" type="button">Se você conhece a composição da CIBio-FM UnB;</button>
+                    <button class="btn obj-list" style="background-color: #d78a4a" type="button"> Se o laboratório tem nível de biossegurança adequado para a atividade</button>                    
+                </div>
+                
             </li>
 
 
