Inserindo Objetivo da Fiscalização

--- a/html/curso.html
+++ b/html/curso.html
@@ -524,14 +524,21 @@
                 <div class="d-grid gap-2 col-10 mx-auto obj-list">             
                     <button class="btn obj-list" style="background-color: #d78a4a" type="button">Se você se lembra deste treinamento, ou se deverá repetí-lo;</button>
                     <button class="btn obj-list" style="background-color: #d78a4a" type="button">Se você conhece a composição da CIBio-FM UnB;</button>
-                    <button class="btn obj-list" style="background-color: #d78a4a" type="button"> Se o laboratório tem nível de biossegurança adequado para a atividade</button>                    
-                </div>
-                
+                    <button class="btn obj-list" style="background-color: #d78a4a" type="button">Se o laboratório tem nível de biossegurança adequado para a atividade</button>                    
+                </div>                
+            </li>
+
+            <li>
+                <h5 class="small">Objetivo da fiscalização</h5>
+                <div class="d-grid gap-2 col-10 mx-auto obj-list">             
+                    <button class="btn obj-list" style="background-color: #d78a4a" type="button">Verificar o cumprimento da Lei;</button>
+                    <button class="btn obj-list" style="background-color: #d78a4a" type="button">Monitorar o registro de atividades;</button>
+                    <button class="btn obj-list" style="background-color: #d78a4a" type="button">Garantir um nível adequado de proteção nas atividades com OGM.</button>                    
+                </div>  
             </li>
 
 
-
-
+        
 
 
 
