Adicionando Novos Tópicos em 'Objetivo da Fiscalização'

--- a/html/curso.html
+++ b/html/curso.html
@@ -533,14 +533,12 @@
                 <div class="d-grid gap-2 col-10 mx-auto obj-list">             
                     <button class="btn obj-list" style="background-color: #d78a4a" type="button">Verificar o cumprimento da Lei;</button>
                     <button class="btn obj-list" style="background-color: #d78a4a" type="button">Monitorar o registro de atividades;</button>
-                    <button class="btn obj-list" style="background-color: #d78a4a" type="button">Garantir um nível adequado de proteção nas atividades com OGM.</button>                    
+                    <button class="btn obj-list" style="background-color: #d78a4a" type="button">Garantir um nível adequado de proteção nas atividades com OGM.</button>  
+                    <button class="btn obj-list" style="background-color: #d78a4a" type="button">Resultados</button>  
+                    <button class="btn obj-list" style="background-color: #d78a4a" type="button">Elevar a confiança na tecnologia.</button>                      
+                    <button class="btn obj-list" style="background-color: #d78a4a" type="button">PRECISAMOS OBEDECER AS NORMAS DE BIOSSEGURANÇA!!!</button>             
                 </div>  
-            </li>
-
-
-        
-
-
+            </li>           
 
 
         </ul>
