--- a/html/curso.html
+++ b/html/curso.html
@@ -540,6 +540,13 @@
                 </div>  
             </li>           
 
+            <li>
+                <li>
+                    <h5 class="small">Introdução à Biossegurança em Laboratórios</h5>                    
+                    <img src="../images/biosseg-concept.png" alt="Biossegurança">
+                </li>
+                
+            </li>
 
         </ul>
     </div>
